--- a/package.json
+++ b/package.json
@@ -4,20 +4,35 @@
   "description": "Jss and Tdd crash course",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "./node_modules/.bin/eslint src/*.js",
+    "prepush": "npm run lint",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js",
+    "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AndreAffonso/js-tdd-course.git"
   },
-  "keywords": [
-    "JS",
-    "TDD"
-  ],
+  "keywords": ["JS", "TDD"],
   "author": "André Affonso",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/AndreAffonso/js-tdd-course/issues"
   },
-  "homepage": "https://github.com/AndreAffonso/js-tdd-course#readme"
+  "homepage": "https://github.com/AndreAffonso/js-tdd-course#readme",
+  "devDependencies": {
+    "babel-eslint": "^8.2.2",
+    "chai": "^4.1.2",
+    "eslint": "^4.19.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-html": "^4.0.2",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.7.0",
+    "husky": "^0.14.3",
+    "mocha": "^5.0.4",
+    "prettier": "^1.11.1"
+  }
 }
